# Koyamaki

./: .gitignore  CMakeLists.txt  LICENSE  README.md  intersection.h  main.cpp  ray.h  sphere.cpp  sphere.h  vec3f.cpp  vec3f.h
src/: CMakeLists.txt  camera.h  intersection.cpp  intersection.h  light.cpp  light.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  plane.cpp  plane.h  ray.cpp  ray.h  raytrace.cpp  scene.cpp  scene.h  shader.cpp  shader.h  shape.h  solver.cpp  solver.h  sphere.cpp  sphere.h  vec3f.cpp  vec3f.h  view.cpp  view.h
